[workspace]
resolver = "3"
default-members = ["shroudb-sentry-server"]
members = [
    "shroudb-sentry-server",
    "shroudb-sentry-core",
    "shroudb-sentry-protocol",
    "shroudb-sentry-client",
    "shroudb-sentry-cli",
]

[workspace.package]
description = "Policy-as-code authorization engine with signed JWT decisions"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-sentry-core = { path = "shroudb-sentry-core", version = "0.1.0", registry = "shroudb" }
shroudb-sentry-protocol = { path = "shroudb-sentry-protocol", version = "0.1.0", registry = "shroudb" }
shroudb-sentry-client = { path = "shroudb-sentry-client", version = "0.1.0", registry = "shroudb" }

# Commons crates (shroudb registry)
shroudb-core = { version = "0.1.0", registry = "shroudb" }
shroudb-crypto = { version = "0.1.0", registry = "shroudb" }
shroudb-storage = { version = "0.1.0", registry = "shroudb" }
shroudb-telemetry = { version = "0.1.0", registry = "shroudb" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Crypto
ring = "0.17"

# Networking
axum = "0.8"
rustls = "0.23"
rustls-pki-types = { version = "1", features = ["std"] }
tokio-rustls = "0.26"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
base64 = "0.22"
hex = "0.4"
libc = "0.2"
notify = "7"
rustyline = { version = "17", features = ["derive"] }
rustls-native-certs = "0.8"
