[workspace]
resolver = "3"
default-members = ["shroudb-sentry-server"]
members = [
    "shroudb-sentry-core",
    "shroudb-sentry-engine",
    "shroudb-sentry-protocol",
    "shroudb-sentry-server",
    "shroudb-sentry-client",
    "shroudb-sentry-cli",
]

[workspace.package]
version = "1.4.6"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-sentry-core = { path = "shroudb-sentry-core", version = "1.4.5", registry = "shroudb" }
shroudb-sentry-engine = { path = "shroudb-sentry-engine", version = "1.4.5", registry = "shroudb" }
shroudb-sentry-protocol = { path = "shroudb-sentry-protocol", version = "1.4.5", registry = "shroudb" }
shroudb-sentry-client = { path = "shroudb-sentry-client", version = "1.4.5", registry = "shroudb" }

# ShrouDB commons (shroudb registry)
shroudb-store = { version = "0.1.2", registry = "shroudb" }
shroudb-storage = { version = "0.2.13", registry = "shroudb" }
shroudb-acl = { version = "0.1.4", registry = "shroudb" }
shroudb-crypto = { version = "0.1.1", registry = "shroudb" }
shroudb-chronicle-core = { version = "1.2.2", registry = "shroudb" }
shroudb-protocol-wire = { version = "0.1.0", registry = "shroudb" }
shroudb-server-bootstrap = { version = "0.1.0", registry = "shroudb" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Security
zeroize = { version = "1", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "2"
hex = "0.4"
base64 = "0.22"
dashmap = "6"
