[package]
name = "shroudb-sentry-cli"
description = "CLI tool for the Sentry authorization policy engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-sentry-cli"
path = "src/main.rs"

[dependencies]
shroudb-sentry-client.workspace = true

tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
