[package]
name = "shroudb-sentry-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
