[package]
name = "shroudb-sentry-client"
description = "Rust client SDK for the Sentry authorization policy engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
shroudb-client-common.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
