[package]
name = "shroudb-sentry-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shroudb-crypto.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
