[package]
name = "shroudb-sentry-engine"
description = "Store-backed authorization policy engine for Sentry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-sentry-core.workspace = true
shroudb-acl.workspace = true
shroudb-store.workspace = true
shroudb-crypto.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
base64.workspace = true
hex.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
shroudb-storage = { workspace = true, features = ["testing"] }
