[package]
name = "shroudb-sentry-protocol"
description = "RESP3 wire protocol for the Sentry authorization policy engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-sentry-core.workspace = true
shroudb-sentry-engine.workspace = true
shroudb-acl.workspace = true
shroudb-store.workspace = true

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
shroudb-storage.workspace = true
shroudb-crypto.workspace = true
tempfile = "3"
base64.workspace = true
