[package]
name = "shroudb-sentry-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "shroudb-sentry"
path = "src/main.rs"

[dependencies]
shroudb-sentry-core.workspace = true
shroudb-sentry-protocol.workspace = true
shroudb-crypto.workspace = true
shroudb-storage.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
ring.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
shroudb-telemetry.workspace = true
hex.workspace = true
libc.workspace = true
axum.workspace = true
base64.workspace = true
notify.workspace = true
