[package]
name = "shroudb-sentry-server"
description = "TCP server for the Sentry authorization policy engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-sentry"
path = "src/main.rs"

[dependencies]
shroudb-sentry-core.workspace = true
shroudb-sentry-engine.workspace = true
shroudb-sentry-protocol.workspace = true
shroudb-acl.workspace = true
shroudb-store.workspace = true
shroudb-storage.workspace = true
shroudb-protocol-wire.workspace = true
shroudb-server-tcp.workspace = true
shroudb-server-bootstrap.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
shroudb-sentry-client.workspace = true
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde_json.workspace = true
base64.workspace = true
